# github-query

./: LICENSE  Main.hs  github-query.cabal  stack.yaml
app/: Main.hs
src/: Github.hs  Query.hs  Types.hs
src/github/api/: Query.hs  Types.hs
