name:                github-query
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/github-query#readme
license:             BSD3
license-file:        LICENSE
author:              Travis Poulsen
maintainer:          travis.poulsen@gmail.com
copyright:           2016 Travis Poulsen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Github.Api.Query
                     --, Github.Api.Query
                     --, Github.Api.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson > 0.11.0 && < 0.12.0
                     , bytestring >= 0.10.0 && < 0.11.0
                     , containers >= 0.5.0 && < 0.6.0
                     , lens > 4.0.0 && < 5.0.0
                     , lens-aeson >= 1.0.0 && < 2.0.0
                     , text >= 1.2.0 && < 1.3.0
                     , unordered-containers >= 0.2.0 && < 0.3.0
                     , wreq > 0.4.0 && < 0.5.0
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/tpoulsen/github-query
